--- a/client/check.html
+++ b/client/check.html
@@ -18,7 +18,7 @@ function init()
 	ctx.drawImage(circle.img,10,10);
 }
 </script>
-<script src=lib.js?callback=init></script>
+<script src=https://rawgit.com/NoamDev/JSGameLib/client-side/client/lib.js type=text/javascript></script>
 </head>
 <body>
 </body>
