--- a/client/check.html
+++ b/client/check.html
@@ -14,6 +14,8 @@ function init()
 	room.place(ball, 10,10);
 	game.addRoom(room);
 	game.start();
+	a();
+	game.ctx.fillRect(0,0,10,10);
 }
 function a()
 {
