--- a/client/check.html
+++ b/client/check.html
@@ -6,17 +6,20 @@ var circle=null;
 var ctx=null
 function init()
 {
-	game = new JSG.Game(document.getElementById("canvas"),500,500);
-	circle = new JSG.Sprite("circle.bmp");
+	game = new JSG.Game(document.getElementById("game"),500,500);
+	circle = new JSG.Sprite(game.image("circle.bmp"));
 	ball = new JSG.Entity();
 	ball.sprite = circle;
+	ball.addEventListener("create",function(){this.move()})
 	var room = new JSG.Room();
 	room.place(ball, 10,10);
 	game.addRoom(room);
+	game.start()
+	console.log("init end")
 }
 </script>
-<script src=https://rawgit.com/NoamDev/JSGameLib/client-side/client/lib.js type=text/javascript></script>
+<script src=lib.js type=text/javascript></script>
 </head>
 <body>
-<div id="game"><canvas id=canvas></canvas</>
+<div id="game"><div/>
 </body>
