--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       frame.document.head.apppendChild(script);
 
     }
-  </scripr>
+  </script>
 </head>
 <body>
   <textarea id="code"></textarea>
