--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       div.id="game";
       var script=document.createElement("script");
       script.innerHTML=document.getElementById("code").innerHTML;
-      frame.contentDocument.head.apppendChild(libscript);
-      frame.contentDocument.head.apppendChild(div);
-      frame.contentDocument.head.apppendChild(script);
+      frame.contentDocument.head.appendChild(libscript);
+      frame.contentDocument.head.appendChild(div);
+      frame.contentDocument.head.appendChild(script);
 
     }
   </script>
