--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   </script>
 </head>
 <body>
-  <textarea id="code"></textarea>
+  <textarea id="code">
+  function init()
+    {
+    }
+  </textarea>
   <button onclick=run>run</button>
 </body>
 <iframe id="frame"></iframe>
