--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </script>
 </head>
 <body>
-  <textarea id="code" width="50%">
+  <textarea id="code" style="width:50%">
   function init()
     {
     }
