--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   </script>
 </head>
 <body>
-  <textarea id="code" style="width:50%">
+  <textarea id="code" style="width:50%;height:100%">
   function init()
     {
     }
   </textarea>
   <button onclick=run>run</button>
 </body>
-<iframe id="frame"></iframe>
+<iframe id="frame" style="width:50%;height:100%"></iframe>
 </html>
