--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
   </script>
 </head>
 <body>
-  <textarea id="code" style="width:50%;height:80%">
+  <div style="width:50%;height:80%">
+  <textarea id="code">
   function init()
     {
     }
   </textarea>
   <button onclick=run>run</button>
+  </div>
+  <div style="width:50%;height:80%"><iframe id="frame" ></iframe></div
 </body>
-<iframe id="frame" style="width:50%;height:80%"></iframe>
 </html>
