--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    html,body{
+    margin:0;
+    padding:0,
+    height:100%,
+    width:100%
+    }
+  </style>
   <script>
     function run()
     {
