--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div style="width:50%;height:80%">
-  <textarea id="code">
+  <textarea id="code" rows="50">
   function init()
     {
     }
