--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </script>
 </head>
 <body>
-  <div style="width:50%;height:80%">
+  <div style="width:50%;height:200px">
   <textarea id="code" rows="50">
   function init()
     {
@@ -35,6 +35,6 @@
   </textarea>
   <button onclick=run>run</button>
   </div>
-  <div style="height:80%"><iframe id="frame" ></iframe></div
+  <div style="height:220px"><iframe id="frame" ></iframe></div
 </body>
 </html>
