--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
   </textarea>
   <button onclick=run>run</button>
   </div>
-  <div style="height:220px"><iframe id="frame" ></iframe></div
+  <div style="height:220px"><iframe id="frame" ></iframe></div>
 </body>
 </html>
