--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     height:100%,
     width:100%
     }
+    #frame{
+    width:500px;
+      height:500px
+    }
   </style>
   <script>
     function run()
@@ -35,6 +39,6 @@
   </textarea>
   <button onclick=run>run</button>
   </div>
-  <div style="height:220px"><iframe id="frame" ></iframe></div>
+  <div style="height:220px"><iframe id="frame"></iframe></div>
 </body>
 </html>
