--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     }
     #frame{
     width:500px;
-      height:500px
-        margin-left:50%
+    height:500px;
+    margin-left:50%;
     }
   </style>
   <script>
