--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       div.id="game";
       var script=document.createElement("script");
       script.innerHTML=document.getElementById("code").innerHTML;
-      frame.contentDocument.head.appendChild(div);
+      frame.contentDocument.body.appendChild(div);
       frame.contentDocument.head.appendChild(script);
       frame.contentDocument.head.appendChild(libscript);
 
