--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     function run()
     {
       var frame=document.getElementById("frame");
-      frame.innerHTML="";
+      frame.src="about:blank";
       var libscript=document.createElement("script");
       libscript.src="lib/client/lib.js";
       var div=document.createElement("div");
