--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       var script=document.createElement("script");
       script.innerHTML=document.getElementById("code").innerHTML;
       frame.contentDocument.open();
+      frame.contentDocument.write("<!DOCTYPE html><html><head></head><body></body></html>");
+      frame.contentDocument.close()
       frame.contentDocument.body.appendChild(div);
       frame.contentDocument.head.appendChild(script);
       frame.contentDocument.head.appendChild(libscript);
