--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     }
   </style>
   <script>
+    var frame=null;
     function run()
     {
-      var frame=document.getElementById("frame");
+      var frameContainer=document.getElementById("frame");
+      if(frame!=null)frameContainer.removeChild(frame);
+      var frame=document.createElement("iframe");
       //frame.src="about:blank";
       var libscript=document.createElement("script");
       libscript.src="lib/client/lib.js";
@@ -31,7 +34,7 @@
       frame.contentDocument.body.appendChild(div);
       frame.contentDocument.head.appendChild(script);
       frame.contentDocument.head.appendChild(libscript);
-
+      frameContainer.appendChild(frame);
     }
   </script> 
 </head>
@@ -44,6 +47,6 @@
   </textarea>
   <button onclick=run>run</button>
   </div>
-  <div style="height:220px"><iframe id="frame"></iframe></div>
+  <div style="height:220px" id="frame"></div>
 </body>
 </html>
