--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     {
     }
   </textarea>
-  <button onclick=run>run</button>
+  <button onclick=run()>run</button>
   </div>
   <div style="height:220px" id="frame"></div>
 </body>
