--- a/lib/client/check.html
+++ b/lib/client/check.html
@@ -22,5 +22,5 @@ function init()
 <script src=lib.js type=text/javascript></script>
 </head>
 <body>
-<div id="game"><div/>
+<div id="game"></div>
 </body>
