--- a/lib/client/check.html
+++ b/lib/client/check.html
@@ -15,7 +15,9 @@ function init()
 	var room = new JSG.Room();
 	room.place(ball, 10,10);
 	game.addRoom(room);
+	alert("no so fast")
 	game.start()
+	
 	console.log("init end")
 }
 </script>
