--- a/lib/client/check.html
+++ b/lib/client/check.html
@@ -15,11 +15,12 @@ function init()
 	var room = new JSG.Room();
 	room.place(ball, 10,10);
 	game.addRoom(room);
-	game.start()
+	//game.start()
 }
 </script>
 <script src=lib.js type=text/javascript></script>
 </head>
 <body>
 <div id="game"></div>
+<button onclick=game.start()></button>
 </body>
