--- a/lib/client/check.html
+++ b/lib/client/check.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 <script>
 var game=null;
@@ -24,3 +26,4 @@ function init()
 <div id="game"></div>
 <button onclick=game.start()></button>
 </body>
+</html>
