--- a/lib/client/check.html
+++ b/lib/client/check.html
@@ -18,8 +18,11 @@ function setup()
 	circle = new JSG.Sprite(JSG.loader.res["circle.png"]);
 	ball = new JSG.Entity();
 	ball.sprite = circle;
-	ball.addEventListener("key-down-ArrowDown",function(){this.move(0,100)})
-	ball.addEventListener("room-border",function(){this.move(0,0)});
+	ball.addEventListener("key-down-ArrowDown",function(){this.move(0,99)})
+    ball.addEventListener("key-down-ArrowUp",function(){this.move(0,-99)})
+    ball.addEventListener("key-down-ArrowRight",function(){this.move(99,0)})
+    ball.addEventListener("key-down-ArrowLeft",function(){this.move(-99,0)})
+	ball.addEventListener("intersect-border",function(){this.move(0,0);this.x=this.x_old;this.y=this.y_old});
 	var room = new JSG.Room();
 	room.place(ball, 10,10);
 	game.addRoom(room);
