--- a/lib/client/check.html
+++ b/lib/client/check.html
@@ -4,7 +4,7 @@
 <script src=lib.js type=text/javascript></script>
 <script>
 var game=null;
-var ball=null;
+var player=null;
 var circle=null;
 function load()
 {
@@ -19,29 +19,25 @@ function setup()
 	mario = new JSG.Sprite(JSG.loader.res["mario.gif"]);
 	var rec = new JSG.Sprite(JSG.loader.res["wall.png"]);
 
-	ball = new JSG.Entity();
+	player = new JSG.Entity();
 	var wall=new JSG.Entity();
 	wall.sprite=rec;
 	wall.solid=true;
-	ball.sprite = mario;
-	ball.addEventListener("key-down-ArrowDown",function(){this.move(0,50)})
-    ball.addEventListener("key-down-ArrowUp",function(){this.move(0,-50)})
-    ball.addEventListener("key-down-ArrowRight",function(){this.move(50,0)})
-    ball.addEventListener("key-down-ArrowLeft",function(){this.move(-50,0)})
-	ball.addEventListener("intersect-border",function(){this.move(0,0);this.x=this.x_old;this.y=this.y_old});
-	ball.addEventListener("collision",function(){this.move(0,0)})
+	player.sprite = mario;
+	speed=5
+    player.addEventListener("key-down-ArrowUp",function(){this.speed_y=-speed;this.gravitation=0.5});
+    player.addEventListener("key-down-ArrowRight",function(){this.speed_x=speed});
+    player.addEventListener("key-down-ArrowLeft",function(){this.speed_x=-speed});
+	player.addEventListener("collision",function(){this.speed_y=0;this.gravitation=0;})
+	player.addEventListener("out-of-room",function(){this.x=-this.width;this.y=400})
 	var room = new JSG.Room();
-	room.place(ball, 250,250);
+	room.place(player, 250,420);
 	for(var x=0;x<500;x+=50)
 	{
 		room.place(wall, x,0);
 		room.place(wall, x,450);
 	}
-	for(var y=50;y<500;y+=50)
-	{
-		room.place(wall, 0,y);
-		room.place(wall, 450,y);
-	}
+
 	game.addRoom(room);
 	game.start()
 }
